fix: overflow based on vh scale

--- a/src/components/organisms/SingleSwiper/index.scss
+++ b/src/components/organisms/SingleSwiper/index.scss
@@ -28,6 +28,7 @@
             align-items: flex-end;
             // height: 545px;
             height: 60vh;
+            min-height: 480px;
 
             .swiper-slide {
                 max-width: 31%;
